test-cases/negative/test_044_duplicate_variable.lay
# negative test: duplicate variable declaration
# expected: error should be thrown

the variable x of type Number is 5
the variable x of type Number is 10


